# maverick

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  auto-nav-launch.sh  colcon_defaults.yaml  justfile  maverick.tmux.conf  package.xml  pyproject.toml  setup.cfg  setup.py  tmux.conf  tooling.apt  waypoint_converter.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  docker-build.yaml  lint.yaml  test.yaml  test.yml
Embedded_ROS_Marvin/: enc_odom_publisher.py  odrive_two_motors.py
Embedded_ROS_Marvin/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
assets/: igvc2026_waypoints.csv
docs/: CONTRIBUTING.md  DEVELOPMENT.md  PLAYBOOK.md
embedded_ros_marvin/: enc_odom_publisher.py  estop_driver.py  estop_serial_node.py  led_driver.py  led_subscriber.py  odrive_driver.py  odrive_executable.py  odrive_sub_pub.py  odrive_test.py  odrive_two_motor.py  odrive_two_motors.py  pure_pursuit_controller.py  pure_pursuit_lookahead.py  recovery_executable.py  ros2 topic pub --once.yaml  serial_estop_monitor.py
launch/: embedded.launch.py  launch_ekf.py  launch_embedded.py
params/: arv_ekf.yaml
scripts/: calibrate_odrive.py  checks.sh  clear_odrive_errors.py  common.py  convert_waypoint.py  create-device-alias.sh  create-package.sh  create_device_alias.py  create_package.py  extract_message.py  format-lint.sh  format.py  format.sh  generate_pyrightconfig.py  get_cam_idx.py  hsv_tune.py  lint.py  lint.sh  pre_commit.py  publish_message.py  remove-device-alias.sh  remove_device_alias.py  setup.py  setup.sh  setup_environment.py  setup_environment.sh
sdr_estop/: estop.py  estop_epy_block_2.py  estop_epy_block_3.py  estopnew.grc
src/bringup/: README.md  package.xml  setup.py
src/bringup/bringup/: launch_utils.py
src/bringup/config/core/: twist_mux.yaml
src/bringup/config/hardware/: odrive_driver.yaml  vectornav.yaml  vectornav_driver.yaml
src/bringup/config/localization/: ekf.yaml
src/bringup/config/teleop/: teleop_ps4.yaml  teleop_ps4_wireless.yaml  teleop_xbox.yaml  teleop_xbox_wireless.yaml
src/bringup/config/visualization/: maverick.rviz
src/bringup/courses/default/: gps.json
src/bringup/courses/igvc_north/: gps.json
src/bringup/courses/igvc_south/: gps.json  map.json
src/bringup/courses/practice_igvc2026/: gps.json
src/bringup/courses/practice_igvc_north/: gps.json
src/bringup/courses/practice_igvc_south/: gps.json
src/bringup/courses/self_drive_test/: gps.json
src/bringup/courses/test/: gps.json  map.json
src/bringup/courses/test2/: gps.json  map.json
src/bringup/courses/test3/: gps.json  map.json
src/bringup/courses/test4/: gps.json  map.json
src/bringup/launch/: base.launch.py  core.launch.py  cv.launch.py  gps_origin_calculator.launch.py  hardware.launch.py  localization.launch.py  navigation.launch.py  simulation.launch.py  teleop.launch.py
src/core/maverick_msgs/: CMakeLists.txt  package.xml
src/core/maverick_msgs/msg/: MissionState.msg
src/core/state_machine/: README.md
src/core/utils/: README.md  package.xml  setup.py
src/cv/cv_self_drive/: README.md  package.xml  setup.cfg  setup.py
src/cv/cv_self_drive/cv_self_drive/: functional_tests_occ_grid.py  hsv.py  hsv_values.json  self_drive_occ_grid.py
src/cv/cv_self_drive/cv_self_drive/functional_tests/: curved_lane_keeping.py  functional_test_parent.py  left_turn.py  obstructed_pedestrian_detection.py  pedestrian_lane_changing.py  pothole_lane_changing.py  right_turn.py  tire_detection_img.py
src/cv/cv_self_drive/scripts/: zed_hsv_demo.py
src/cv/ransac/: README.md  package.xml  setup.cfg  setup.py
src/description/common_description/: CMakeLists.txt  README.md  package.xml  setup.py
src/description/maverick_description/: README.md  package.xml  setup.py
src/hardware/estop_driver/: README.md  package.xml  setup.cfg  setup.py
src/hardware/led_driver/: README.md  package.xml  setup.cfg  setup.py
src/hardware/odrive_driver/: README.md  package.xml  setup.py
src/hardware/odrive_driver/odrive_driver/: odrive_driver.py  odrive_driver_config.py
src/hardware/odrive_driver/scripts/: calibrate_odrive.py  clear_odrive_errors.py  plot_iq.py  plot_motor_signals.py
src/hardware/ublox_driver/: README.md  package.xml  setup.py
src/hardware/vectornav_driver/: CMakeLists.txt  README.md  package.xml
src/hardware/vectornav_driver/include/: transforms.hpp  vectornav_driver.hpp
src/hardware/vectornav_driver/scripts/: euler_monitor.py  vectornav_monitor.py
src/hardware/vectornav_driver/src/: vectornav_driver.cpp
src/localization/enc_odom_publisher/: README.md  package.xml  setup.py
src/localization/gps_origin_calculator/: README.md  package.xml  setup.py
src/localization/lat_lon_converter/: README.md  package.xml  setup.py
src/localization/map_odom_publisher/: CMakeLists.txt  README.md  package.xml
src/navigation/autonav_goal_selection/: README.md  package.xml  setup.py
src/navigation/autonav_mission_control/: README.md  package.xml  setup.cfg  setup.py
src/navigation/autonav_mission_control/autonav_mission_control/: autonav_mission_control.py  autonav_mission_control_config.py
src/navigation/occupancy_grid_transform/: README.md  package.xml  setup.py
src/navigation/path_planning/: README.md  package.xml  setup.py
src/navigation/path_smoothing/: README.md  package.xml  setup.cfg  setup.py
src/navigation/path_tracking/: README.md  package.xml  setup.py
src/navigation/recovery_behavior/: README.md  package.xml  setup.cfg  setup.py
src/simulation/occupancy_grid_simulator/: README.md  package.xml  setup.py
src/simulation/sensor_simulator/: README.md  package.xml  setup.py
src/template/template_cpp/: CMakeLists.txt  README.md  package.xml
src/template/template_python/: README.md  package.xml  setup.py
src/visualization/occupancy_grid_visualization/: README.md  package.xml  setup.py
waypoints/: README.md
waypoints/decimal/: GENERATED_DO_NOT_EDIT  igvc2026_autonav.csv  igvc2026_practice.csv
waypoints/dms/: igvc2026_autonav.csv  igvc2026_practice.csv
(+70 files in other folders)
