[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maverick-tooling"
version = "0.1.0"
description = "Tooling config for a ROS 2 Python workspace"
requires-python = ">=3.10"

[project.optional-dependencies]
tooling = [
    "ruff>=0.6.0",
    "mypy>=1.8",
    "types-PyYAML",
    "types-pyserial",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "build",
    "install",
    "log",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff rules
    "A",    # builtins shadowing
    "C4",   # comprehension optimizations
    "PIE",  # misc correctness
    "ISC",  # string concat issues
    "PTH",  # use pathlib instead of os.path
    "RET",  # return-statement hygiene
    "FURB", # refurb - modernizations
    "DTZ",  # timezone-aware datetimes
    "ICN",  # import conventions (numpy as np, etc.)
    "LOG",  # logging-call correctness
    "N",    # pep8 naming
    "D",    # pydocstyle (replaces ament_pep257)
]
ignore = [
    "E501", # allow long lines that the formatter does not rewrite
    "D1",   # don't require docstrings; only check formatting of the ones that exist
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.10"

# Output
pretty = true
show_error_codes = true

# Strictness
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
enable_error_code = [
    "ignore-without-code", # require # type: ignore[code], not bare ignores
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
]

# Module discovery and import resolution
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = false
exclude = [
    "(^|/)(build|install|log)/",
    "(^|/)setup\\.py$",
]

[[tool.mypy.overrides]]
# Modules with no usable type information: ROS 2 generated interfaces/packages and third-party libraries that ship no
# stubs or py.typed marker. Keep alphabetical.
module = [
    "ament_index_python.*",
    "builtin_interfaces.*",
    "foxglove_msgs.*",
    "geographic_msgs.*",
    "geometry_msgs.*",
    "launch.*",
    "launch_ros.*",
    "maverick_msgs.*",
    "nav_msgs.*",
    "odrive.*",
    "playsound",
    "pyubx2",
    "rclpy.*",
    "robot_localization.*",
    "sensor_msgs.*",
    "std_msgs.*",
    "std_srvs.*",
    "tf2_geometry_msgs.*",
    "tf2_ros.*",
    "visualization_msgs.*",
]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
