<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_driver</name>
  <version>0.1.0</version>
  <description>Dual ODrive motor controller driver</description>
  <maintainer email="ericb@umich.edu">ericb</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-odrive-pip</exec_depend>
  <exec_depend>python3-playsound-pip</exec_depend>
  <exec_depend>utils</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
