<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_mission_control</name>
  <version>0.1.0</version>
  <description>Mission control node for autonav: waypoint management, zone state, and recovery coordination</description>
  <maintainer email="ryanliao@umich.edu">Ryan Liao</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>maverick_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>utils</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
